# aidmi

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  flake.nix  justfile  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: FINDINGS.md
benchmarks/.baseline/: fixtures.sha256
benchmarks/.baseline/2026-07-06-yq3v/: figures.sha256  figures.txt  tidy.csv
benchmarks/.baseline/2026-07-07-kw8r/: figures.txt  tidy.csv
benchmarks/.baseline/v2-final-gemini/: index.html
benchmarks/.baseline/v2-final-ise/: figures.sha256  index.html
benchmarks/08-06-2026/: FINDINGS.md
benchmarks/08-06-2026/report/: cells.csv  summary.csv  summary.md
benchmarks/2026-06-17-1/grids/: ollama_snapshot.yaml
benchmarks/2026-06-17-1/report/: cells.csv  summary.md
benchmarks/2026-06-17-1/results/: results_bak.jsonl
benchmarks/2026-06-17-2/report/: summary.csv
benchmarks/2026-06-17-2/results/: results.jsonl
benchmarks/2026-06-24-2qxv/: campaign.yaml
benchmarks/2026-06-28-308w/: grid.yaml
benchmarks/2026-06-30-hard/: campaign.yaml  results.jsonl
benchmarks/2026-07-01-mwmn/: results.jsonl
benchmarks/2026-07-01-x535/: campaign.yaml  comparison.md
benchmarks/grids/: main_grid.yaml  v2-final-gemini.yaml
benchmarks/report/: cells.csv
benchmarks/v2-final-gemini/: campaign.yaml
benchmarks/v2-final-ise/: campaign.yaml  grid.yaml
documentation/: README.md  architecture.md  cli.md  concepts.md  configuration.md  data-formats.md  extending.md  getting-started.md  salesforce-auth.md
frontend/: README.md
scripts/: extract_sqlite_fixtures.py  test-ci-container.sh
(+6929 files in other folders)
