[project]
name = "aidmi"
version = "0.1.0"
description = "AI-driven data migration platform"
readme = "README.md"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "testcontainers[postgres]>=4.0",
    "pyyaml>=6.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]
