[project]
name = "aidmi"
version = "0.1.0"
description = "AI-driven data migration platform"
readme = "README.md"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "testcontainers[postgres]>=4.0",
    "pyyaml>=6.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# load_dotenv(override=True) must run before the registration imports below it
"packages/orchestrator/src/aidmi_orchestrator/cli.py" = ["E402"]
# typer.Argument(...) as a default is the documented Typer signature style
"packages/pipeline/src/aidmi_pipeline/cli.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["aidmi_orchestrator", "aidmi_pipeline"]

[tool.pytest.ini_options]
markers = [
    "requires_llm: tests that hit a real LLM endpoint; skipped unless API keys are present",
    "requires_docker: tests that need a Postgres testcontainer",
]
